--- a/public/components/common/footer/view.html
+++ b/public/components/common/footer/view.html
@@ -1,3 +1,3 @@
-<div class="footer_container">
-    <p class="text-center">&copy; Copyright ambur 2017</p>
+<div class="footer_container" ng-show="loading == false">
+    <p class="text-center">&copy; Copyright <label ng-bind="company_name"></label> <span ng-bind="year"></span></p>
 </div>
