connected to db

--- a/public/components/common/sidebar/style.less
+++ b/public/components/common/sidebar/style.less
@@ -1,5 +1,6 @@
 .sidebar_container {
   @import "../../../js/lib/bootstrap/less/bootstrap";
+  @import "../../../js/lib/bootstrap-material-design/less/bootstrap-material-design";
   @icon-font-path: "/js/lib/bootstrap/fonts/";
   @import '../../../css/shared';
 
