--- a/public/components/common/system/style.less
+++ b/public/components/common/system/style.less
@@ -1,6 +1,9 @@
 .system_container {
   @import "../../../js/lib/bootstrap/less/bootstrap";
-  @icon-font-path:"/js/lib/bootstrap/fonts/";
+  @import "../../../js/lib/bootstrap-material-design/less/bootstrap-material-design";
+  @icon-font-path: "/js/lib/bootstrap/fonts/";
+  @import '../../../css/shared';
+
   .alert{
     margin-bottom: 0px;
     border-radius: 0px;
