--- a/public/components/common/footer/style.less
+++ b/public/components/common/footer/style.less
@@ -1,5 +1,8 @@
 .footer_container {
   @import "../../../js/lib/bootstrap/less/bootstrap";
-  @icon-font-path:"/js/lib/bootstrap/fonts/";
+  @import "../../../js/lib/bootstrap-material-design/less/bootstrap-material-design";
+  @icon-font-path: "/js/lib/bootstrap/fonts/";
+  @import '../../../css/shared';
+
 
 }
