--- a/public/components/common/topbar/style.less
+++ b/public/components/common/topbar/style.less
@@ -1,5 +1,7 @@
 .topbar_container {
   @import "../../../js/lib/bootstrap/less/bootstrap";
+  @import "../../../js/lib/bootstrap-material-design/less/bootstrap-material-design";
   @icon-font-path: "/js/lib/bootstrap/fonts/";
   @import '../../../css/shared';
+
 }
