--- a/public/components/views/home/style.less
+++ b/public/components/views/home/style.less
@@ -1,4 +1,8 @@
+.home-wrapper{
 @import "../../../js/lib/bootstrap/less/bootstrap";
 @import "../../../js/lib/bootstrap-material-design/less/bootstrap-material-design";
 @icon-font-path: "/js/lib/bootstrap/fonts/";
 @import '../../../css/shared';
+padding-top: 100px;
+  min-height: calc(100vh - @footer-height);
+}
