--- a/public/components/views/home/view.html
+++ b/public/components/views/home/view.html
@@ -1,10 +1,13 @@
 <div class="home-wrapper">
     <div class="container">
-        <div class="row-fluid">
+        <header class="row-fluid">
             <top-bar></top-bar>
-        </div>
-        <div class="row-fluid">
+        </header>
+        <article class="row-fluid content">
 
-        </div>
+        </article>
+        <footer class="row-fluid">
+            <foot></foot>
+        </footer>
     </div>
 </div>
