added a better view template

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -1,5 +1,10 @@
 @import "../css/shared";
-html,body{
+
+html, body {
   height: 100%;
   background-color: #ffffff !important;
+}
+
+article.content {
+  min-height: calc(100vh - @footer-height);
 }
