Fixed View Creation

--- a/public/css/global.less
+++ b/public/css/global.less
@@ -6,5 +6,5 @@ html, body {
 }
 
 article.content {
-  min-height: calc(100vh - @footer-height);
+  min-height: calc(100vh - @footer-height) !important;
 }
